--- a/templates/index.html
+++ b/templates/index.html
@@ -4,5 +4,10 @@
 	</head>
 	<body>
 		<h1>hello,World!</h1>
+		{{ . }}
+
+		<!-- <form> -->
+			<!-- <textarea></textarea> -->
+		<!-- </form> -->
 	</body>
 </html>
