htmlファイルを分割，/editorで実行する

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,4 @@
-<!DOCTYPE html>
-<html>
-	<head>
-	</head>
-	<body>
-		<h1>hello,World!</h1>
-		{{ . }}
-
-		<!-- <form> -->
-			<!-- <textarea></textarea> -->
-		<!-- </form> -->
-	</body>
-</html>
+{{ define "content" }}
+	<h1>hello,World!</h1>
+	{{ . }}
+{{ end }}
