--- a/templates/editor.html
+++ b/templates/editor.html
@@ -2,7 +2,7 @@
 {{ . }}
 	<div id="editor" style="height:600px"></div>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.0/ace.js"></script>
-	<script src="../static/js/main.js"></script>
+	<script src="/static/js/editor.js"></script>
 	<!-- <form> -->
 		<!-- <textarea></textarea> -->
 	<!-- </form> -->
