--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
+	<title>main</title>
 	</head>
 	<body>
-		<h1>hello,World!</h1>
-		{{ . }}
-
-		<!-- <form> -->
-			<!-- <textarea></textarea> -->
-		<!-- </form> -->
+		<div>user name: {{.UserData.name}}</div>
+		<div><a href="/logout">sign out</a></div>
 	</body>
 </html>
