set save button

--- a/templates/editor.html
+++ b/templates/editor.html
@@ -1,8 +1,6 @@
 {{ define "content" }}
+<button type="button" id="save_button" class="btn btn-primary">Save</button>
 	<div id="editor" style="height:600px"></div>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.0/ace.js"></script>
 	<script src="/static/js/editor.js"></script>
-	<!-- <form> -->
-		<!-- <textarea></textarea> -->
-	<!-- </form> -->
 {{ end }}
